--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
                             <p>Alex Rose</p>
                         </div>
                         <div class="rating2">
-                            <img src="images/Star.svg" alt="Star">
+                            <img src="images/star.svg" alt="star">
                             <p>4.5</p>
                         </div>
 
