--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
                             <p>Jason Kwon</p>
                         </div>
                         <div class="rating1">
-                            <img src="images/Star.svg" alt="Star" class="rating1_img">
+                            <img src="images/star.svg" alt="star" class="rating1_img">
                             <p>4.8</p>
                         </div>
                             
@@ -197,7 +197,7 @@
                             <p>Lizzie Ulrich</p>
                         </div>
                         <div class="rating3">
-                            <img src="images/Star.svg" alt="Star" class="rating3_img">
+                            <img src="images/star.svg" alt="star" class="rating3_img">
                             <p>4.2</p>
                         </div>
                         
@@ -211,7 +211,7 @@
                     <div class="profile_widget_flex">
                         <p>4 commits</p>
                         <div class="rating4">
-                            <img src="images/Star.svg" alt="Star" class="rating3_img">
+                            <img src="images/star.svg" alt="star" class="rating3_img">
                             <p>4.2</p>
                         </div>
                     </div>
